--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <section class="u-black u-clearfix u-section-1" id="sec-4983">
       <img class="u-image u-image-contain u-image-default u-image-1" src="images/wqe23123fasdfasdf.png" alt="" data-image-width="2633" data-image-height="652">
       <img class="u-image u-image-contain u-image-default u-image-2" src="images/wqe23123fasdfasdf.png" alt="" data-image-width="2633" data-image-height="652">
+      <img class="u-image u-image-contain u-image-default u-image-3" src="images/Text_E234234ffect_006.png" alt="" data-image-width="2633" data-image-height="652" data-href="https://pump.fun/board">
       <spline-viewer url="https://prod.spline.design/mN7VNDHK3owPzoJc/scene.splinecode"></spline-viewer>
       <img class="u-image u-image-contain u-image-default u-image-3" src="images/Text_E234234ffect_006.png" alt="" data-image-width="2633" data-image-height="652" data-href="https://pump.fun/board">
     </section>
